try to fix nav gap

--- a/getinspired.css
+++ b/getinspired.css
@@ -347,6 +347,7 @@ section.posters-wrapper > h1 {
     align-items: center;
     padding: 0;
     margin: 0;
+    width: 100%;
   }
 
   nav > ol {
